--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -35,7 +35,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/insert">Insert products</a>
+        <a class="nav-link" href="/insert">Add products</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/view">View all products</a>
