--- a/views/view.hbs
+++ b/views/view.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Motor World</title>
+    <title>World of moto models</title>
     <style>
         h1{
             text-align: center;
@@ -34,14 +34,14 @@
 </div>
 </nav>
 
-<h1 style="color: orange;">Motor world</h1>
+<h1 style="color: orange;">World of moto models</h1>
 <div class="container"> 
     <div class="Product">
         <div class="mt-4">
             <div class="row">
                 {{#each products}}
                     <div class="card" style="width: 18rem;">
-                        <img src="{{picURL}}" class="card-img-top" alt="...">
+                        <img src="{{picURL}}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">{{name}}</h5>
                             <p class="card-text">Price: {{price}}$</p>
